fixed loading jump and change size on hover

--- a/css/navigationProjects.css
+++ b/css/navigationProjects.css
@@ -13,6 +13,7 @@
     overflow: hidden;
     text-indent: 100%;
     white-space: nowrap;
+    z-index: 20;
     background: url(../img/down-project-arrow.svg) no-repeat center 50%;
     visibility: hidden;
     opacity: 0;
